applications/traefik-addons/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  ingressClassName: traefik
  rules:
  # @TODO this needs to be dynamic
    - host: traefik.prod-poc-1.internal.tbnl.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
